manifests/application/base/store-k8s/store-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: jhipster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: "v1"
  template:
    metadata:
      labels:
        app: store
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - store
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: store-app
          image: l00162972/diss22-store
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
