manifests/application/base/store-k8s/store-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-postgresql
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-postgresql
  template:
    metadata:
      labels:
        app: store-postgresql
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: postgres
          image: postgres@sha256:d6809f4833ca6caf11a4969a7f41420d3e5fcf26b8c9ca4253c34d5a5fa377cc
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: store-postgresql
  namespace: jhipster
spec:
  selector:
    app: store-postgresql
  ports:
    - port: 5432
